# twinby_reklamaton

./: .gitignore  README.md  app.py  conversation_memory_анна.json  dating_mentor.db  requirements.txt
backend/: .test.env  Dockerfile  app.py  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/config/: default.py
backend/app/database/: alembic.ini
backend/app/database/alembic/: env.py
backend/app/database/alembic/versions/: 36d90a7fc859_add_chats_and_messages.py  4e14f8d1bdf1_fix_chats.py  8969cdadb2f4_init.py  d04cc67b482b_add_is_user_to_message.py  fde2f3d2bcf8_add_is_main_to_chat.py
backend/app/database/connection/: __init__.py  session.py
backend/app/database/models/: __init__.py  chat.py  message.py  settings.py  user.py
backend/app/endpoints/: __init__.py  auth.py  chats.py  healh_check.py  messages.py  settings.py  upload.py  user.py
backend/app/llm/: llm_client.py
backend/app/schemas/: __init__.py  chats.py  messages.py  registration.py  settings.py  user.py
backend/app/utils/: ai_config.py  ai_generation.py  chats.py  messages.py  s3_manager.py  settings.py  user.py
backend/llm/: agents.py  llm_client.py  message_reply_advisor.py  robot_girl_agent.py
backend/tests/: conftest.py
backend/tests/testcases/user/: test_register.py
dating-mentor-flask/: .env.example  .gitignore  agents.py  app.py  models.py  requirements.txt  run.sh  utils.py
dating-mentor-flask/instance/: dating_mentor.db
dating-mentor-flask/templates/: 404.html  (+6 more)
frontend/: Dockerfile  package-lock.json  package.json  vue.config.js
static/: index.html
(+19 files in other folders)
